# kestrel

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  live-smoke.yml
docs/: provisioning-jetson.md
scripts/: jetson-flightcheck.sh  tui_screenshots.py
src/kestrel/: __init__.py  cli.py  config.py  doctor.py  kestrel_md.py  repl.py  task_setup.py
src/kestrel/agent/: __init__.py  _artifact_paths.py  compaction.py  critique.py  loop.py  observer.py  plan.py  walkthrough.py
src/kestrel/cost/: __init__.py  meter.py
src/kestrel/data/: kestrel.default.toml  models.default.toml
src/kestrel/kb/: embeddings.py  service.py  store.py
src/kestrel/managers/: __init__.py  approval.py  budget.py  mode.py  session.py  undo.py
src/kestrel/provider/: __init__.py  base.py  cache.py  errors.py  events.py  litellm_client.py  retry.py
src/kestrel/registry/: __init__.py  loader.py  model.py
src/kestrel/router/: policy.py
src/kestrel/security/: __init__.py  corpus.py  framing.py
src/kestrel/tools/: __init__.py  _paths.py  edit_file.py  execute.py  read_file.py  registry.py  sandbox.py  search.py  verify.py
src/kestrel/tui/: app.py  approval_modal.py  commands.py  kestrel.tcss  observer_bridge.py  plan_comment_modal.py  status.py
tests/: conftest.py
tests/acceptance/: __init__.py  test_p001_entrypoint.py  test_p011_dod_phase_0.py  test_p023_dod_phase_1.py  test_p033_dod_phase_2.py  test_p043_dod_phase_3.py  test_p055_dod_phase_4.py
tests/e2e/: __init__.py  test_p005_live_openrouter.py  test_p006_live_zai.py  test_p011_dod_live.py  test_p023_dod_live.py  test_p033_dod_live.py
tests/fixtures/: kestrel.system.toml  mock_ollama.py  mock_openai.py  models.system.toml
tests/fixtures/cassettes/: README.md  budget_done_small.sse  budget_toolcall_big.sse  cache_hit_turn1_cold.sse  cache_hit_turn2_warm.sse  cache_hit_turn3_done.sse  compaction_summary.sse  critique_approve.sse  critique_reject.sse  done_no_more_tools.sse  openrouter_glm52_ansi.sse  openrouter_glm52_hello.sse  toolcall_edit_ansi_payload.sse  toolcall_edit_farewell.sse  toolcall_edit_greet.sse  toolcall_execute_pytest.sse  toolcall_execute_rm.sse  toolcall_kb_probe.sse  toolcall_read_file.sse  toolcall_read_file_payload.sse  toolcall_verify.sse  zai_glm52_hello.sse
tests/fixtures/injection_corpus/: README.md  ansi_escape_laden_payload.json  fake_destructive_action_success.json  forged_closing_delimiter_system_turn.json  nested_untrusted_block_spoof.json  readme_ignore_previous_instructions.json  zero_width_smuggled_instruction.json
tests/golden/: p003_registry_normalized.golden  p007_cost_line.golden  p009_doctor_output.golden  p013_framed_sample.golden  p017_undo_entry.golden  p024_verify_commands.golden  p027_stable_prefix.golden  p028_cache_alert.golden  p029_turn_record.golden  p037_status_line.golden  p039_tool_log_lines.golden  p048_plan_comments.golden  p048_plan_markdown.golden  p053_walkthrough_no_verification.golden  p053_walkthrough_with_verification.golden
tests/helpers/: __init__.py  observer.py
tests/integration/: __init__.py  test_p005_openrouter.py  test_p006_zai.py  test_p009_doctor_live.py  test_p012_mock_sequence.py  test_p015_search_redteam.py  test_p015_search_rg.py  test_p016_sandbox.py  test_p020_retry_openrouter.py  test_p025_verify_sandbox.py  test_p044_effort_openrouter.py  test_p044_effort_zai.py  test_p056_ollama_embed.py
tests/system/: __init__.py  test_p008_redteam_ansi.py  test_p008_repl_stream.py  test_p009_doctor_cli.py  test_p019_approval_cli.py  test_p022_loop_scripted_task.py  test_p026_verification_gate_scripted.py  test_p027_cache_prefix_stable.py  test_p029_session_persist_resume.py  test_p031_budget_halt_resume.py  test_p032_compaction_scripted.py  test_p036_observer_scripted.py  test_p038_tui_conversation_redteam.py  test_p038_tui_conversation_stream.py  test_p038_tui_day_spend_baseline.py  test_p039_diff_redteam.py  test_p039_tool_log_diff_live.py  test_p040_artifact_pane_live.py  test_p040_artifact_pane_reset.py  test_p040_artifact_redteam.py  test_p042_approval_modal_live.py  test_p043_cli_default_entry.py  test_p045_effort_reaches_provider.py  test_p045_plan_tools_restricted_scripted.py  test_p047_critique_scripted.py  test_p048_revise_plan_scripted.py  test_p049_plan_task_scripted.py  test_p050_tui_plan_submission.py  test_p051_tui_revise_plan_live.py  test_p052_tui_execute_plan_live.py  test_p054_tui_walkthrough_live.py  test_p059_kb_reaches_dispatch_context.py
tests/unit/: __init__.py  conftest.py  test_fixture_line_endings.py  test_p001_package.py  test_p002_config.py  test_p003_contract.py  test_p003_registry.py  test_p004_contract.py  test_p004_events.py  test_p005_normalize.py  test_p005_stream_grammar.py  test_p006_dispatch.py  test_p007_cost.py  test_p008_cli.py  test_p008_repl.py  test_p008_sanitize.py  test_p009_cli.py  test_p009_doctor.py  test_p010_flightcheck_script.py  test_p010_provisioning_doc.py  test_p013_corpus_loads.py  test_p013_framing.py  test_p014_read_file.py  test_p014_redteam.py  test_p014_schema_contract.py  test_p015_schema_contract.py  test_p015_search_args.py  test_p015_search_parse_hits.py  test_p015_search_timeout.py  test_p016_execute_args.py  test_p016_execute_redteam.py  test_p016_sandbox.py  test_p016_schema_contract.py  test_p017_undo.py  test_p018_edit_file.py  test_p018_edit_file_redteam.py  test_p018_paths.py  test_p018_schema_contract.py  test_p019_approval.py  test_p019_execute_classification.py  (+66 more)
