[project]
name = "kestrel-cli"
version = "0.0.1"
description = "Kestrel: a terminal coding assistant for constrained edge hardware."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm",
    "pydantic>=2",
    "platformdirs",
    "textual>=0.80",
]

[project.scripts]
kestrel = "kestrel.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kestrel"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "hypothesis",
    "ruff",
    "mypy",
    "starlette",
    "uvicorn",
    "httpx",
    "mutmut",
    "interrogate",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/kestrel"]

[tool.interrogate]
fail-under = 80
paths = ["src/kestrel", "tests"]
verbose = 2

[tool.mutmut]
source_paths = ["src/kestrel"]
only_mutate = [
    "src/kestrel/cost/meter.py",
    "src/kestrel/agent/loop.py",
    "src/kestrel/agent/critique.py",
]
pytest_add_cli_args_test_selection = [
    "-m",
    "p007 or p022 or p026 or p028 or p031 or p032 or (p033 and not live) or p047",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "--strict-markers"
asyncio_mode = "auto"
filterwarnings = [
    "error",
    # litellm pulls in dependencies that emit deprecation noise on import;
    # this is a targeted ignore, not a blanket suppression.
    "ignore::DeprecationWarning:litellm.*",
    # Ignore deprecation warnings from test infrastructure and core libraries
    "ignore::DeprecationWarning:hypothesis.*",
    "ignore::DeprecationWarning:pytest_asyncio.*",
    # litellm's own background logging worker is bound to whichever
    # asyncio loop is running when it is first touched, and reinitializes
    # (dropping whatever it had queued) the moment a call arrives on a
    # different one -- exactly what happens every time
    # `kestrel.agent.critique` opens its own short-lived loop via
    # `asyncio.run()` on a `asyncio.to_thread` worker alongside a task's
    # own longer-lived one. The dropped queue entry then surfaces here as
    # a coroutine garbage-collected without ever being awaited; harmless
    # (it only ever wrapped litellm's own internal telemetry, never
    # anything this codebase reads), but real enough under this project's
    # `filterwarnings = ["error"]` policy to need a targeted ignore.
    "ignore:coroutine 'Logging\\..*' was never awaited:RuntimeWarning",
]
markers = [
    "unit: fast, deterministic tests of pure logic with no network or filesystem side effects",
    "integration: tests exercising a real seam (e.g. provider layer) against recorded fixtures",
    "system: full end-to-end behavior against a hermetic fixture repo and mock model server",
    "acceptance: a phase Definition-of-Done clause encoded as an executable scenario",
    "smoke: checks run by `kestrel doctor`, in CI, and on launch",
    "sanity: the fast (< 30s) subset gating every commit",
    "regression: a pinned test guarding a previously fixed bug or a golden-file contract",
    "e2e: opt-in, budget-capped tests against a live model backend",
    "api: contract tests for normalized event streams and tool schemas",
    "ui: Textual Pilot snapshot and interaction tests",
    "redteam: prompt-injection and adversarial-input corpus tests",
    "cost_regression: tests asserting token/cost bands for fixture tasks",
    "live: requires live network access and real provider credentials; skipped by default",
    "dod_phase_0: acceptance scenario for the initial skeleton milestone's Definition of Done",
    "p001: scaffold, packaging, and test-harness milestone",
    "p002: kestrel.toml configuration-loading milestone",
    "p003: model registry milestone",
    "p004: provider event stream, protocol, and error taxonomy milestone",
    "p005: LiteLLM streaming adapter and OpenRouter backend milestone",
    "p006: Z.ai backend and per-entry dispatch milestone",
    "p007: usage-to-cost metering milestone",
    "p008: streaming REPL and model hot-swap milestone",
    "p009: `kestrel doctor` diagnostics milestone",
    "p010: Jetson provisioning documentation milestone",
    "p011: aarch64 CI and initial-milestone acceptance",
    "p012: scripted multi-turn mock-server replay and tool-call cassettes",
    "p013: untrusted-data framing and the injection corpus loader",
    "p014: the read_file tool and its argument-parsing contract",
    "p015: the search tool's ripgrep invocation and argument-parsing contract",
    "p016: the execute tool and its bubblewrap sandbox wrapper",
    "p017: the journaled undo manager and its reversion granularities",
    "p018: the edit_file tool's unique-anchor replacement and its write-through undo journal",
    "p019: the destructive-action approval gate and execute's classification hook",
    "p020: provider-call retry with exponential backoff and full jitter",
    "p021: the tool schema registry and dispatcher",
    "p022: the tool-calling agent loop and its termination predicates",
    "p023: the `kestrel run`/`kestrel undo` CLI entry points and the phase acceptance suite",
    "p024: the KESTREL.md project-memory loader and its verify-command parsing",
    "p025: the verify tool and its VerificationReport artifact",
    "p026: wiring verification as the agent loop's exit criterion",
    "p027: the byte-stable cache prefix and its wiring into every model call",
    "p028: the cache-hit ratio aggregate and its low-hit-rate alert",
    "p029: the journaled session manager and the agent loop's resume path",
    "dod_phase_1: acceptance scenario for the tool-calling-agent milestone's Definition of Done",
    "p030: the session/day/month budget-cap classifier with soft and hard thresholds",
    "p031: wiring budget-aware degradation, hard-halt, and resume into the agent loop",
    "p032: summarize-and-fold compaction triggered by context-window pressure",
    "p033: kestrel run's verification/resume/budget CLI wiring and its own acceptance suite",
    "dod_phase_2: acceptance scenario for the verified-and-budgeted-agent milestone's Definition of Done",
    "p034: the KestrelApp Textual skeleton, default theme, and pane layout",
    "p035: the PLAN/FAST mode manager's session state, effort mapping, and model override",
    "p036: the injectable LoopObserver event-sink and its wiring into the agent loop",
    "p037: the status bar's pure StatusSnapshot rendering and its show() widget hook",
    "p038: the shared task-deps builder and the TUI conversation pane's live task wiring",
    "p039: the tool log's live started/finished lines, the diff pane's unified-diff rendering, and the in-flight tool-call loading indicator",
    "p040: the artifact pane's rendering of the task's most recent VerificationReport",
    "p041: the ctrl+p command palette's model/mode/undo/cost/resume/approve/kb entries",
    "p042: the modal approval screen and its bridge from a background tool-call thread to the app's own event loop",
    "p043: the doctor tui check, the cockpit's default-entry wiring, the screenshot script, and the phase acceptance suite",
    "dod_phase_3: acceptance scenario for the assembled Textual cockpit milestone's Definition of Done",
    "p044: effort-to-backend-native reasoning-depth mapping",
    "p045: per-task effort/tool-access scoping and resume-time message injection",
    "p046: the task-class-to-model-tag router policy and its resolve_model_id lookup",
    "p047: routed self-critique's real model call and its [managers.self_critique] toggle",
    "p048: the ImplementationPlan artifact's types, parsing, rendering, and comment-revision flow",
    "p049: ModeManager-driven effort/tool/verification scoping in build_task_deps and kestrel run's --mode flag",
]
